--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
             
    </form>
         </div>
-          <button class="more-button" @click="showMoreImages">More</button>
+          <button id="more-button" @click="showMoreImages">More</button>
           <!-- this is where I render my component (inside Main) -->
         <vue-component
             v-if="imageId"
