--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title></title>
 </head>
 <body>
-    <h1>Welcome to this wounderful Imageboard</h1>
+    <h1>Welcome to the Imageboard</h1>
    
      <!-- Main element has access to Vue logic -->
     <div id = "main">
@@ -16,8 +16,12 @@
             <input name ="description" placeholder="Image Description" autocomplete="off" type ="text" v-model="description">
             <input name ="userName" placeholder="username" autocomplete="off" type ="text" v-model="userName">
             </div>
-            <input name ="file" type ="file" accept ="image/*" @change="handleFileChange">
+            <div class="upload">
+            <input id="inputfile"  class="inputfile" name ="file" type ="file" accept ="image/*" @change="handleFileChange">
+            <label id="label" for="inputfile">Choose an Image</label>
             <button @click="handleUpload"><a href="/">Upload</a></button>
+            <!--<span id ="filename">"No file choosen</span>-->
+        </div>
         </form>
 
  <h3>Latest Images</h3>
