--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
                  :image-id="imageId"
            ></comments-component">
            <div class="img-description">
-             <p class ="p-component">{{createdAt}}h</p>
+             <p class ="p-component">{{createdAt}}</p>
             <p class ="p-component">Uploaded by: {{username}}</p>
             <p class ="p-component">DESCRIPTION: PAINTING BY {{description}}</p>
             
