prev+next+hide, if no more Images

--- a/public/index.html
+++ b/public/index.html
@@ -49,9 +49,8 @@
            <div class="closeX" @click="closeModal">close</div>
            <div class="prev-and-next"> 
            <img class="clicked-image" :src="url"/>
-           <form><button id ="prev-image" @click="getPrevImage">prev</button><button id ="next-image"  @click="getNextImage">next</button><br>
+           <button id ="prev-image" @click="getPrevImage">prev</button><button id ="next-image"  @click="getNextImage">next</button><br>
             <button class="delete-button" @click="deleteImage">delete Image</button>
-            </form>
            </div>
             <comments-component
                  :image-id="imageId"
