--- a/public/index.html
+++ b/public/index.html
@@ -45,10 +45,11 @@
   <script id = "template" type ="text/x-template">
     <div class ="component">
       <h2>{{title}}</h2> 
-      <div class="closeX" @click="closeModal">close</div>
+      <div class="closeX" @click="closeModal">X</div>
         <div class="prev-and-next"> 
           <img class="clicked-image" :src="url"/>
-          <button id ="prev-image" @click="getPrevImage">prev</button><button id ="next-image"  @click="getNextImage">next</button><br>
+          <button id ="prev-image" @click="getPrevImage">prev</button>
+          <button id ="next-image"  @click="getNextImage">next</button><br>
         </div>
         <comments-component :image-id="imageId"></comments-component">
         <div class="img-description">
